tests/baselines/reference/assignmentCompatPredicates20.errors.txt
tests/cases/compiler/assignmentCompatPredicates20.ts(13,5): error TS2322: Type '{ text: string; userid: number; screenname: undefined; }' is not assignable to type 'PrivateMessage'.
  Predicate present(screenname) was not satisfied in type { text: string; userid: number; screenname: undefined; }
    Property 'screenname' is missing in type '{ text: string; userid: number; screenname: undefined; }'.


==== tests/cases/compiler/assignmentCompatPredicates20.ts (1 errors) ====
    
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } with {
        present(text);
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    present(screenname);
    }
    
    let pm1: PrivateMessage = {text: "Hi!", userid: 42, screenname: undefined};
        ~~~
!!! error TS2322: Type '{ text: string; userid: number; screenname: undefined; }' is not assignable to type 'PrivateMessage'.
!!! error TS2322:   Predicate present(screenname) was not satisfied in type { text: string; userid: number; screenname: undefined; }
!!! error TS2322:     Property 'screenname' is missing in type '{ text: string; userid: number; screenname: undefined; }'.
    let pm2: {text: string, userid: undefined} = pm1;